--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 asgiref==3.8.1
+Brotli==1.1.0
+click==8.1.8
+dj-database-url==2.3.0
 Django==4.2
 django-taggit==6.1.0
 gunicorn==23.0.0
+h11==0.14.0
 Markdown==3.7
 packaging==25.0
 pillow==11.2.1
 psycopg2-binary==2.9.10
-sqlparse==0.5.3
-dj-database-url==2.3.0
 python-decouple==3.8
+sqlparse==0.5.3
+typing_extensions==4.13.2
+uvicorn==0.34.2
+whitenoise==6.9.0
